--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,3 @@
-# on:
-#   push:
-#     branches: [ main ]
-
-# jobs:
-#   build:
-#     runs-on: ubuntu-22.04
-#     steps:
-#       - uses: actions/checkout@v4
-#       - name: Build APK
-#         uses: digreatbrian/buildozer-action@v2
-#         with:
-#           python-version: 3.8
-#           buildozer-cmd: buildozer -v android debug
-
-#       - name: Upload artifacts
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: package
-#           path: ./bin/*.apk
-
 on:
   push:
     branches: [ main ]
@@ -29,20 +8,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-
       - name: Install dependencies
-        run: |
+        run:
           python -m pip install --upgrade pip setuptools wheel
           pip install --upgrade buildozer Cython virtualenv
-
+          sudo apt-get update && sudo apt-get install -y lld
+      
       - name: Build APK
         uses: digreatbrian/buildozer-action@v2
         with:
-          python-version: "3.11"
+          python-version: 3.11
           buildozer-cmd: buildozer -v android debug
 
       - name: Upload artifacts
@@ -50,3 +25,35 @@ jobs:
         with:
           name: package
           path: ./bin/*.apk
+
+# on:
+#   push:
+#     branches: [ main ]
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-22.04
+#     steps:
+#       - uses: actions/checkout@v4
+
+#       - name: Set up Python 3.11
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: "3.11"
+
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip setuptools wheel
+#           pip install --upgrade buildozer Cython virtualenv
+
+#       - name: Build APK
+#         uses: digreatbrian/buildozer-action@v2
+#         with:
+#           python-version: "3.11"
+#           buildozer-cmd: buildozer -v android debug
+
+#       - name: Upload artifacts
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: package
+#           path: ./bin/*.apk
