--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
         run:
           python -m pip install --upgrade pip setuptools wheel
           pip install --upgrade buildozer Cython virtualenv
-          sudo apt-get update && sudo apt-get install -y lld
+          #sudo apt-get update && sudo apt-get install -y lld
       
       - name: Build APK
         uses: digreatbrian/buildozer-action@v2
